# RINS_task1_r

./: nav2.yaml  points.yaml  task2_points.yaml  ultra
avg_hist/: blue_average.npy  green_average.npy  red_average.npy
avg_hist2/: blue_average.npy  green_average.npy  red_average.npy  show.py
face_classification/: 2d_augment.py  predict.py  train_yolo.py
face_classification/runs/classify/train/: args.yaml  results.csv
face_classification/runs/classify/train/weights/: best.pt  last.pt
histograms/: blue_1774861463.8069832.npy  blue_1774861480.5824156.npy  blue_1774861495.2727122.npy  blue_1774861527.1078377.npy  green_1774861172.0321965.npy  green_1774861198.0415065.npy  green_1774861320.4397228.npy  green_1774861625.5185072.npy  green_1774861644.036191.npy  red_1774861720.4437044.npy  red_1774861790.50446.npy  red_1774861818.4650102.npy  red_1774861838.0544176.npy
new_hist/: average.py  blue1_ring_hist.npy  blue2_ring_hist.npy  blue3_ring_hist.npy  blue4_ring_hist.npy  blue5_ring_hist.npy  blue6_ring_hist.npy  green1_ring_hist.npy  green2_ring_hist.npy  green3_ring_hist.npy  green4_ring_hist.npy  green5_ring_hist.npy  green6_ring_hist.npy  red1_ring_hist.npy  red2_ring_hist.npy  red3_ring_hist.npy  red4_ring_hist.npy  red5_ring_hist.npy  show.py
src/task1_real/: CMakeLists.txt
src/task1_real/config/: nav2.yaml
src/task1_real/launch/: localization.launch.py  task1_nav.launch.py
src/task1_real/maps/: map1.pgm  map1.yaml
src/task1_real/scripts/: detect_people.py  detect_people2.py  detect_rings.py  detect_rings2.py  robot_commander.py  robot_commander2.py
